<resources>
    <string name="app_name">LoginScreen</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="email_error">Please enter a email address</string>
    <string name="error_invalid_email">Email is not valid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="quote">You Learn More From Failure Than From Success,Don’t Let It Stop You,Failure Builds Character</string>
    <string name="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="action_settings">Settings</string>
    <string name="course">There are 5 courses in this specialization</string>
    <string name="datascientist">Average Data Scientist IT salary in India </string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="services">Services</string>
    <string name="consultation">Consultation</string>
    <string name="profile">Profile</string>
</resources>